--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="temperature">
       <div class="degree-section">
-        <h2 class="temperature-degree">34</h2>
+        <h2 class="temperature-degree">Pending</h2>
         <span>F</span>
       </div>
       <div class="temperature-description">Its friggin cold</div>
